# Pu-renderer

./: CMakeLists.txt  README.md
Rasterizer/src/math/: Vec.hpp
Raytracing/src/: camera.h  headers.h  main.cpp  utils.h
Raytracing/src/basic_impl/: color.cpp  color.h  funcs.h  interval.h  vec3.h
Raytracing/src/hittable/: hittable.h  hittable_list.h  material.h  sphere.h
src/: camera.h  color.cpp  hittable.h  main.cpp  ray.h  sphere.h  utils.h
src/hittable/: hittable.h  hittable_list.h  sphere.h
